# neurotic

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/activation/: functions.rs
src/core/: connection.rs  convolution.rs  layer.rs  network.rs  neuron.rs
src/optimisers/: adam.rs  no_optimiser.rs  optimiser.rs  rmsprop.rs
src/training/: batch.rs  cost.rs  trainer.rs
