[package]
name = "neurotic"
version = "0.1.0"
authors = ["aliqut"]
description = "A neural network library written for Rust."
license = "MIT"
repository = "https://github.com/aliqut/neurotic"
homepage = "https://github.com/aliqut/neurotic"
categories = ["machine-learning", "artificial-intelligence", "ai", "neural-network", "neural-networks"]
keywords = ["neural network", "ai", "rust", "machine learning"]
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
rayon = "1.10.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.214", features = ["derive"] }
