[package]
name = "neurotic"
version = "0.2.0"
authors = ["aliqut"]
description = "A neural network library written for Rust."
license = "MIT"
repository = "https://github.com/aliqut/neurotic"
homepage = "https://github.com/aliqut/neurotic"
categories = ["science"]
keywords = ["neuralnetwork", "ai", "rust", "machinelearning"]
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
ndarray = { version = "0.16.1", features = ["rayon", "serde"] }
rand = "0.8.5"
rayon = "1.10.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.214", features = ["derive"] }
